[tool.poetry]
name = "nautobot-diagrams"
version = "0.1.4"
description = "Diagrams Plugin for Nautobot"
authors = ["Nik Zeynalov <nik.zeynalov@originenergy.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus.apps.origin.com.au/repository/cloudservices-pypi-hosted/simple"
default = true